# LocalDrop

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: cli.py  database.py  main.py
app/routes/: files.py  pages.py  qr.py  rooms.py
app/services/: file_service.py  room_service.py
app/static/: room.js
app/templates/: index.html  room.html
app/utils/: filenames.py  network.py  rooms.py
